fix(Layout): fix z-index setting

--- a/themes/common/layout.less
+++ b/themes/common/layout.less
@@ -59,6 +59,7 @@
       max-width: @layout-sider-collapse-width;
       min-width: @layout-sider-collapse-width;
       overflow: initial;
+      z-index: 2;
     }
   }
   &&-header-fixed > &-sider-fixed > .@{sider-prefix}{
